domain-3-services-and-networking/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: gateway
subsets:
- addresses:
  - ip: 10.244.1.85
  ports:
  - port: 80
