domain-3-services-and-networking/service-selector.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-selector-demo
spec:
  selector:
    app: nginx
  # type:  LoadBalancer | ClusterIP | NodePort
  ports:
  - port: 80
    targetPort: 8080
