domain-3-services-and-networking/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  ports:
  - port: 8080
    targetPort: 80
